EPBDS-15767 Add static analysis tools on the build time
Error Prone and NullAway tools will warn that there are issues in the code.
In the future it will be switched to fail build.